# LongevityCommon-public

./: .gitignore  .gitignore.public  CLAUDE.md  CONCEPT.md  Cargo.toml  DESIGN.md  EVIDENCE.md  FCLC_OFFLOADED.md  KNOWLEDGE.md  LICENSE  LINKS.md  MAP.md  MEMORY.md  NEWS.md  OPEN_PROBLEMS.md  PARAMETERS.md  README.md  STATE.md  STRATEGY.md  THEORY.md  TODO.md  UPGRADE.md  biosense.sh  run.sh  ze_Elder_72.json
AIM/rust-core/: Cargo.toml
AIM/rust-core/crates/aim-ab-router/: Cargo.toml
AIM/rust-core/crates/aim-ai-auto-sweep/: Cargo.toml
AIM/rust-core/crates/aim-ai-backup/: Cargo.toml
AIM/rust-core/crates/aim-ai-case-archiver/: Cargo.toml
AIM/rust-core/crates/aim-ai-cases/: Cargo.toml
AIM/rust-core/crates/aim-ai-compliance-promoter/: Cargo.toml
AIM/rust-core/crates/aim-ai-distillation/: Cargo.toml
AIM/rust-core/crates/aim-ai-doctor/: Cargo.toml
AIM/rust-core/crates/aim-ai-explainer/: Cargo.toml
AIM/rust-core/crates/aim-ai-finding-validator/: Cargo.toml
AIM/rust-core/crates/aim-ai-findings-to-evals/: Cargo.toml
AIM/rust-core/crates/aim-ai-gap-detector/: Cargo.toml
AIM/rust-core/crates/aim-ai-health/: Cargo.toml
AIM/rust-core/crates/aim-ai-ledger/: Cargo.toml
AIM/rust-core/crates/aim-ai-morning-brief/: Cargo.toml
AIM/rust-core/crates/aim-ai-prompt-impact/: Cargo.toml
AIM/rust-core/crates/aim-ai-reflexion/: Cargo.toml
AIM/rust-core/crates/aim-ai-regression/: Cargo.toml
AIM/rust-core/crates/aim-ai-regression-alert/: Cargo.toml
AIM/rust-core/crates/aim-ai-safety-gate/: Cargo.toml
AIM/rust-core/crates/aim-ai-self-modify/: Cargo.toml
AIM/rust-core/crates/aim-ai-skill-standard/: Cargo.toml
AIM/rust-core/crates/aim-ai-suppressions/: Cargo.toml
AIM/rust-core/crates/aim-auth/: Cargo.toml
AIM/rust-core/crates/aim-cli/: Cargo.toml
AIM/rust-core/crates/aim-coach/: Cargo.toml
AIM/rust-core/crates/aim-coder/: Cargo.toml
AIM/rust-core/crates/aim-codesign/: Cargo.toml
AIM/rust-core/crates/aim-compat/: Cargo.toml
AIM/rust-core/crates/aim-config/: Cargo.toml
AIM/rust-core/crates/aim-daily-brief/: Cargo.toml
AIM/rust-core/crates/aim-debate/: Cargo.toml
AIM/rust-core/crates/aim-disagreement/: Cargo.toml
AIM/rust-core/crates/aim-doctor-dry-run/: Cargo.toml
AIM/rust-core/crates/aim-dp/: Cargo.toml
AIM/rust-core/crates/aim-ensemble/: Cargo.toml
AIM/rust-core/crates/aim-escalation-engine/: Cargo.toml
AIM/rust-core/crates/aim-experiment-owner/: Cargo.toml  README.md
AIM/rust-core/crates/aim-experiment-state-machine/: Cargo.toml  README.md
AIM/rust-core/crates/aim-feature-flags/: Cargo.toml
AIM/rust-core/crates/aim-graph/: Cargo.toml
AIM/rust-core/crates/aim-graphrag/: Cargo.toml
AIM/rust-core/crates/aim-grep/: Cargo.toml
AIM/rust-core/crates/aim-health-extended/: Cargo.toml
AIM/rust-core/crates/aim-hive-consumer/: Cargo.toml
AIM/rust-core/crates/aim-hive-queen/: Cargo.toml
AIM/rust-core/crates/aim-hive-worker/: Cargo.toml
AIM/rust-core/crates/aim-hooks/: Cargo.toml
BioSense/backend/: Cargo.toml
CDATA/backend/: Cargo.toml
EpigeneticDrift/backend/: Cargo.toml
FCLC/fclc-core/: Cargo.toml
FCLC/fclc-core/src/: lib.rs  mobile_node.rs  model.rs
FCLC/fclc-core/src/dp/: mod.rs  (+1 more)
FCLC/fclc-core/tests/: integration_round.rs
FCLC/fclc-node/: Cargo.toml
FCLC/fclc-node/src/: app.rs  main.rs
FCLC/fclc-server/: Cargo.toml  Dockerfile
FCLC/fclc-server/migrations/: 001_init.sql  002_audit_log.sql
FCLC/fclc-server/src/: main.rs  models.rs  state.rs
MCOA/backend/: Cargo.toml
Ontogenesis/backend/: Cargo.toml
Proteostasis/backend/: Cargo.toml
Telomere/backend/: Cargo.toml
Telomere/backend/migrations/: 001_initial.sql
crates/cell_dt_cli/: Cargo.toml
crates/cell_dt_cli/src/: lib.rs  main.rs
crates/cell_dt_gui/: Cargo.toml
crates/cell_dt_gui/src/: main.rs
crates/cell_dt_modules/aging_engine/: Cargo.toml
crates/cell_dt_validation/: Cargo.toml
crates/cell_dt_validation/examples/: basic_simulation.rs  centenarian_prediction.rs  circadian_validation.rs  convergence_check.rs  htert_hypoxia_test.rs  mcmc_calibration.rs  not_r_argument.rs  null_model_r2.py  o2_dose_response.rs  param_correlation.rs  sensitivity_analysis.rs  sobol_results.json
crates/cell_dt_validation/src/: biomarkers.rs  calibration.rs  datasets.rs  lib.rs  sensitivity.rs  validation.rs
server/: .env.example  AUDIT.md  Cargo.toml  build.rs
server/.sqlx/: query-2680585a0c488764d98c7298fc14c5f24a17139beabe967d1ce115f7549b619b.json  query-3d5bad3d71f3f8c5c186b4eb0c8a99640d5e896234189a4fab73a181fdb980e2.json  query-58464c044f7cff28f2e4f59d9ac32ec7bd4e581ef4616e7d6b7b28064f9b8d90.json  query-8af6a13709c9a4233294f3279748d9917b6c10348af7249063b50f4bfc4530bf.json  query-8fa8714201b7b7ebfeb64b98ebb33d19b2f8ba4ce17cc8a8c4bc56bc27b21367.json  query-98990cf38a9bb706476eb63d9fe2af6a5764ef8d933db9989450142ccdd81637.json  query-9cd476f2757db107563406bcc6e681ee1819432677ffdaf9f7df4e50ccb22c0a.json  query-a3b1bee4bfe9a6741c2674b92e90a60236961a4f9d791b56157c2723899537c6.json  query-ad34b8a6eb899a6724d9ad16cb6805ae73b6e276be32c386608e32c3e7156819.json  query-de7f8bd84dcdc3a883dd1f3a5ce9bdd0921df6a08afda0cb3226b4b65714b202.json  query-df3522858234db7a7b740f64aec65bee651a23e5b8f498b6ea9d57c10bc3273b.json  query-f1135921787b22831f42fc5457f97dba6808b4fd850e9da53ca28ea8cc0d696d.json
server/deploy/scripts/: migrate.sh  seed.sh
server/deploy/systemd/: longevitycommon-server.service
server/migrations/: 001_initial.sql  002_otp_attempts_and_indexes.sql  003_health_factors.sql  004_add_hrv_sdnn_columns.sql
server/src/: config.rs  lib.rs  main.rs  routes.rs
server/src/db/: mod.rs
server/src/handlers/: admin.rs  auth.rs  biosense.rs  dashboard.rs  data.rs  mod.rs  posts.rs  studies.rs  users.rs  ze_guide.rs
server/src/middleware/: auth.rs  mod.rs  rate_limit.rs
server/src/models/: biosense.rs  intervention.rs  mod.rs  post.rs  study.rs  user.rs  ze_guide.rs  ze_profile.rs
server/src/services/: ai_guide.rs  doi_validator.rs  feed_ranker.rs  mod.rs  ze_compute.rs
server/tests/: auth_integration_tests.rs  feed_ranker_tests.rs  ze_compute_tests.rs
(+1171 files in other folders)
