[workspace]
members = [
    "crates/cell_dt_core",
    "crates/cell_dt_cli",
    "crates/cell_dt_modules/mitochondrial",
    "crates/cell_dt_modules/inflammaging",
    "crates/cell_dt_modules/asymmetric_division",
    "crates/cell_dt_modules/tissue_specific",
    "crates/cell_dt_modules/aging_engine",
    "crates/cell_dt_gui",
    "crates/cell_dt_validation",
    "crates/cell_dt_python",
]
resolver = "2"
