[package]
name = "cdata_backend"
version = "0.1.0"
edition = "2021"
authors = ["LongevityCommon Team"]
description = "CDATA subproject backend - Centriolar Damage Accumulation Theory of Aging"
license = "MIT"
repository = "https://github.com/LongevityCommon/CDATA"
readme = "README.md"

[[bin]]
name = "cdata_backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "decimal", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Security and utilities
argon2 = "0.5"
rand = "0.8"
validator = { version = "0.16", features = ["derive"] }

# API documentation
utoipa = { version = "3", features = ["axum_extras", "chrono", "uuid", "decimal", "json"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "offline"] }
testcontainers = "0.16"
testcontainers-modules = { version = "0.1", features = ["postgres"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
[workspace]
