[package]
name = "fclc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[lib]
name = "fclc_core"
path = "src/lib.rs"
