[package]
name = "fclc-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fclc-node"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
fclc-core = { path = "../fclc-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
rand_distr = "0.4"
