[package]
name = "mcoa_backend"
version = "0.1.0"
edition = "2021"
authors = ["LongevityCommon Team"]
description = "Multi-Counter Architecture of Organismal Aging backend"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
dotenvy = "0.15"
config = "0.14"
once_cell = "1.19"
uuid = { version = "1.7", features = ["serde", "v4"] }

[dev-dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }

[[bin]]
name = "mcoa_backend"
path = "src/main.rs"

[workspace]
