[package]
name = "ontogenesis_backend"
version = "0.1.0"
edition = "2021"
authors = ["LongevityCommon Team"]
description = "Ontogenesis v4.2 backend - Developmental prequel to MCOA (0-25 years)"

[[bin]]
name = "ontogenesis_backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "decimal", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
config = "0.13"
dotenv = "0.15"
anyhow = "1.0"
decimal = { version = "2.3", features = ["sqlx"] }

[dev-dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "offline", "migrate"] }
[workspace]
