[package]
name = "proteostasis_backend"
version = "0.1.0"
edition = "2021"
authors = ["LongevityCommon Team"]
description = "Backend for Proteostasis Counter #5 in MCOA framework"
license = "MIT"
repository = "https://github.com/longevitycommon/proteostasis"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "decimal"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
dotenv = "0.15"
config = "0.13"
anyhow = "1.0"
bb8 = "0.8"
bb8-postgres = "0.8"

[dev-dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "offline"] }

[[bin]]
name = "proteostasis_backend"
path = "src/main.rs"
[workspace]
