[package]
name = "telomere_backend"
version = "0.1.0"
edition = "2021"
authors = ["LongevityCommon Team"]
description = "Backend service for Telomere Shortening Counter (MCOA Counter #2)"
license = "MIT"
repository = "https://github.com/longevitycommon/telomere"

[[bin]]
name = "telomere_server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "decimal", "uuid", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
argon2 = "0.5"
rand = "0.8"
validator = { version = "0.16", features = ["derive"] }
bb8 = "0.8"
bb8-postgres = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
config = "0.13"
dotenv = "0.15"
futures = "0.3"
async-trait = "0.1"
headers = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
[workspace]
