[package]
name = "cell_dt_gui"
version = "0.1.0"
edition = "2021"
description = "CDATA v3.0 — egui desktop simulator"

[[bin]]
name = "cell_dt_gui"
path = "src/main.rs"

[dependencies]
cell_dt_aging_engine = { path = "../cell_dt_modules/aging_engine" }
eframe = { version = "0.27", features = ["default"] }
egui_plot = "0.27"
