[package]
name = "aim-ab-router"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = { workspace = true }
libm = "0.2"

[dev-dependencies]
tempfile = "3"
