[package]
name = "aim-ai-finding-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AIM AI — heuristic auto-validator for diagnostic findings (FV1). Pattern-rules that contradict claims against actual code. Rust port of AI/ai/finding_validator.py."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
regex = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
