[package]
name = "aim-ai-findings-to-evals"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AIM AI — findings → eval cases (FE1). Convert shared file:line findings into regression eval YAML. Rust port of AI/ai/findings_to_evals.py."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = "1"
once_cell = "1"

[[bin]]
name = "aim-ai-findings-to-evals"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
