[package]
name = "aim-ai-health"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AIM AI — health score (HS1). 0-100 score across 5 components, persisted alongside the diagnostic ledger. Rust port of AI/ai/health_score.py."

[[bin]]
name = "aim-ai-health-info"
path = "src/bin/info.rs"

[dependencies]
aim-ai-ledger = { path = "../aim-ai-ledger" }
aim-ai-regression = { path = "../aim-ai-regression" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
